--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/hdk101/doka-data/issues"
   },
-  "homepage": "https://github.com/hdk101/doka-data#readme"
+  "homepage": "https://github.com/hdk101/doka-data#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "pm2": "^4.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
