--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple file storage system",
   "main": "src/index.js",
   "scripts": {
+    "dev": "nodemon .",
     "test": "jest"
   },
   "repository": {
